serverless-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverless-app
  labels:
    app: serverless
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        app: serverless
        tier: web
    spec:
      volumes:
      - name: vault-token
        emptyDir:
          medium: Memory
          sizeLimit: 1Mi
      containers:
      - name: serverless
        image: "registry:5000/serverless:2.2.0"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: vault-token
          mountPath: "/var/tmp/vault"
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "384Mi"
            cpu: "500m" # 0.5 CPU
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          timeoutSeconds: 3
          initialDelaySeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: serverless-service
spec:
  selector:
    app: serverless
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serverless-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: serverless.cloud.lavacro.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: serverless-service
            port:
              number: 80
